--- a/Alpha/AlphaMvc/Views/RoleMaster/IndexRoleMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/RoleMaster/IndexRoleMaster.cshtml
@@ -60,7 +60,7 @@
                     <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                 </td>
             </tr>
-            <tr class="RowCal" id="add-template">
+            <tr class="RowCal" id="add-template9">
                 <td>
                     <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                 </td>
@@ -97,7 +97,7 @@
             </tr>
         </tbody>
     </table>
-<a id="add-row" href="#" onclick="AddRowRoleMaster()">+ Add Row</a>
+<a id="add-row9" href="#" onclick="AddRowRoleMaster()">+ Add Row</a>
 
 <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create', 'RoleMaster', 0)">Save</button>
 
