--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -191,7 +191,7 @@
                                                             <select id="cmbIncomeType" class="Select1"></select>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtUnitWeight" class="UnitWeight Number text-size80 textright">
+                                                            <input type="text" id="txtUnitWeight" class="UnitWeight Number text-size80 textright" onchange="convertFloat()">
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtQty" class="Quantity Number text-size80 textright" placeholder="0" onchange="CalSum()" />
@@ -204,7 +204,7 @@
                                                         </td>
 
                                                         <td>
-                                                            <div class="clone-1"><img id="cloneRowIncome"  class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+                                                            <div class="clone-1"><img id="cloneRowIncome"  class="cloneRowIncome row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                         </td>
                                                         <td>
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
@@ -227,7 +227,7 @@
                                                             <select class="Select1"></select>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright" />
+                                                            <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright" onchange="convertFloat()" />
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtQty" class="Quantity Number text-size80 textright" onchange="CalSum()" />
@@ -239,7 +239,7 @@
                                                             <input type="text" id="txtAmount" disabled class="Amount Number text-size165 txtdisablerow">
                                                         </td>
                                                         <td>
-                                                            <div class="clone-1"><img id="cloneRowIncome" class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+                                                            <div class="clone-1"><img id="cloneRowIncome" class="cloneRowIncome row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                         </td>
                                                         <td>
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
@@ -315,7 +315,7 @@
                                                             <input type="text" id="txtAmount" name="Amount" class="Amount1 Number text-size165 txtdisablerow" disabled>
                                                         </td>
                                                         <td>
-                                                            <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+                                                            <div class="clone-1"><img class="cloneRowExpense row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                         </td>
                                                         <td>
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
@@ -350,7 +350,7 @@
                                                             <input type="text" id="txtAmount" name="Amount" class="Amount1 Number text-size165 txtdisablerow" disabled>
                                                         </td>
                                                         <td>
-                                                            <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+                                                            <div class="clone-1"><img class="cloneRowExpense row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                         </td>
                                                         <td>
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
@@ -609,10 +609,10 @@
                                                         <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtAmount" class="Amount2 Number text-size180 textright">
+                                                        <input type="text" id="txtAmount" class="Amount2 Number text-size180 textright" onchange="convertFloat()">
                                                     </td>
                                                     <td>
-                                                        <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+                                                        <div class="clone-1"><img class="cloneRowSaleOrder row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                     </td>
                                                     <td>
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
@@ -635,10 +635,10 @@
                                                         <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtAmount" class="Amount2 Number text-size180 textright">
+                                                        <input type="text" id="txtAmount" class="Amount2 Number text-size180 textright" onchange="convertFloat()">
                                                     </td>
                                                     <td>
-                                                        <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+                                                        <div class="clone-1"><img class="cloneRowSaleOrder row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                     </td>
                                                     <td>
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
@@ -689,10 +689,10 @@
                                                         <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft">
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtAmount" class="Amount3 Number text-size165 textright">
+                                                        <input type="text" id="txtAmount" class="Amount3 Number text-size165 textright" onchange="convertFloat()">
                                                     </td>
                                                     <td>
-                                                        <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+                                                        <div class="clone-1"><img class="cloneRowInvoice row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                     </td>
                                                     <td>
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
@@ -718,10 +718,10 @@
                                                         <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft">
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtAmount" class="Amount3 Number text-size165 textright">
+                                                        <input type="text" id="txtAmount" class="Amount3 Number text-size165 textright" onchange="convertFloat()">
                                                     </td>
                                                     <td>
-                                                        <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+                                                        <div class="clone-1"><img class="cloneRowInvoice row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                     </td>
                                                     <td>
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
@@ -772,10 +772,10 @@
                                                         <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtAmount" class="Amount4 Number text-size165 textright">
+                                                        <input type="text" id="txtAmount" class="Amount4 Number text-size165 textright" onchange="convertFloat()">
                                                     </td>
                                                     <td>
-                                                        <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
+                                                        <div class="clone-1"><img class="cloneRowReceipt row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                     </td>
                                                     <td>
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
@@ -801,10 +801,10 @@
                                                         <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtAmount" class="Amount4 Number text-size165 textright">
+                                                        <input type="text" id="txtAmount" class="Amount4 Number text-size165 textright" onchange="convertFloat()">
                                                     </td>
                                                     <td>
-                                                        <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
+                                                        <div class="clone-1"><img class="cloneRowReceipt row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                     </td>
                                                     <td>
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
