--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -94,9 +94,9 @@
                                 </ul>
                                 <div class="resp-tabs-container hor_1">
                                     <div>
-                                        <div class="barattach-2">
+                                        @*<div class="barattach-2">
                                             <a href="@Url.Action("CreateJobOrder", "JobOrder")" class="alink"><img src="@Url.Content("~/Images/btnAdd.png")" class="btnimage-2" /></a>
-                                        </div>
+                                        </div>*@
                                         <div class="grigbar">
                                             <div class="myDIV">
                                                 <table class="table table-striped">
