--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
 
         <script language="javascript" type="text/javascript">
             $(document).ready(function () {
+                //$('.dropdown-toggle').addClass('sf-js-enabled');
                 document.getElementById("lblUserName").innerHTML = localStorage['UserName'];
             });
             
@@ -54,6 +55,29 @@
     </head>
     <body>
         <header>
+            @*<nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">WebSiteName</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Page 1-1</a></li>
+                                <li><a href="#">Page 1-2</a></li>
+                                <li><a href="#">Page 1-3</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Page 2</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    </ul>
+                </div>
+            </nav>*@
             <div class="content-wrapper">
                 <div class="float-left">
                     <a href="@Url.Action("Index", "Home")" class="imagelogo"></a>
@@ -61,11 +85,6 @@
                     <img src="@Url.Content("~/Images/log-in.png")" alt="IMAGES" class="imgicon" />
                     <div class="loginname">@Html.ActionLink("Log Out", "IndexLogin", "Login")</div>
                 </div>
-                @*<div class="float-right">*@
-                    @*<section id="login">
-                        @Html.Partial("_LogOnPartial")
-                    </section>*@
-                    @*<nav>*@
                     <label for="show-menu" class="show-menu">Menu ☰</label>
                     <input type="checkbox" id="show-menu" role="button" class="Hidecheckbox">
                     <ul id="menu" class="menuul">
@@ -98,8 +117,6 @@
                         <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Technician", "IndexTechnician", "Technician")</div></div></li>
                         <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Products", "IndexProducts", "Products")</div></div></li>
                         <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Break Down Cost", "IndexBDC", "BDC")</div></div></li>
-                        @*<li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Job Order", "IndexJobOrder", "JobOrder")</div></div></li>*@
-                        @*<li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Test", "View1", "ExpenseMaster")</div></div></li>*@
                         <li class="menuli">
                             <div class="menua">
                                 <div class="menutext">
