--- a/Alpha/AlphaMvc/Views/RoleMaster/IndexRoleMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/RoleMaster/IndexRoleMaster.cshtml
@@ -97,7 +97,7 @@
             </tr>
         </tbody>
     </table>
-<a id="add-row9" href="#" onclick="AddRowRoleMaster()">+ Add Row</a>
-
-<button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create', 'RoleMaster', 0)">Save</button>
+        <a id="add-row9" href="#" onclick="AddRowRoleMaster()">+ Add Row</a>
+        <button type="button" class="btn btn-primary pull-right" onclick="ConfirmDialog('Create', 'RoleMaster', 0)">Save</button>
+        
 
