--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -30,48 +30,50 @@ function GetDetail(currentMonth) {
        {
            url: 'http://localhost:13131/api/CalendarJobOrder',
            type: 'GET',
-           async: false,
            data: dataObject,
            datatype: 'json',
            success: function (data) {
                data = JSON.parse(data);
-               var events = [];
+               var event = [];
                for (var i = 0; i < data.Table.length; i++) {
                    var EWorking = data.Table[i].EWorking.replace('T00:00:00', 'T23:59:00');
                    var TypeWorking = data.Table[i].TypeWorkingName.substr(0, 1);
-                   events.push({
+                   event.push({
                        title: data.Table[i].JobNo + '(' + TypeWorking+')',
                        url: '/JobOrder/EditJobOrder?id=' + data.Table[i].ID,
                        start: data.Table[i].SWorking,
                        end: EWorking
-                       ////id: data.Table[i].ID
                    });
                }
+               $('#calendar').fullCalendar('removeEvents');
+               $('#calendar').fullCalendar('addEventSource', event);
+               $('#calendar').fullCalendar('rerenderEvents');
+
                $('#calendar').fullCalendar({
-                   async: false,
                    header: {
                        left: 'prev,next',
                        center: 'title',
                        right: ''
                    },
 
-                   defaultDate: today,
-                   navLinks: true, // can click day/week names to navigate views
-                   editable: true,
+                   defaultView: 'month',
+                   //navLinks: true, // can click day/week names to navigate views
+                   editable: false,
                    eventLimit: true, // allow "more" link when too many events
                    displayEventTime: false,
-                   events: events
+                   events: event           
                });
+               
            },
            error: function (msg) {
                alert(msg);
            }
-
        });
 }
 $(document).ready(function () {
     var currentDate = new Date();
     var currentMonth = currentDate.getMonth() + 1;
+
     GetDetail(currentMonth);
     $('#calendar').on('click', '.fc-next-button', function () {
         var currentMonth = $('#calendar').fullCalendar('getDate');
@@ -81,7 +83,6 @@ $(document).ready(function () {
     $('#calendar').on('click', '.fc-prev-button', function () {
         var currentMonth = $('#calendar').fullCalendar('getDate');
         currentMonth = parseInt(currentMonth.format('M'));
-        //alert(currentMonth);
         GetDetail(currentMonth);
     });
 });
@@ -96,8 +97,8 @@ $(document).ready(function () {
     }
 
     #calendar {
-        max-width: 800px;
-        max-height: 550px;
+        /*max-width: 0 auto;
+        max-height: auto;*/
         margin: 0 auto;
     }
 </style>
