--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -72,7 +72,7 @@
             <ul class="form-style-1">
                 <li>
 
-                    <input type="file" name="photo" id="photo" onchange="readURL(this);" disabled>
+                    <input type="file" name="photo" id="photo" onchange="readURL(this);">
                     <div class="imgpreview"><img id="imgPreview" alt="your image" class="img-center"/></div>
                     
                 </li>
