--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -56,6 +56,9 @@
                 <input type="text" id="txtJobNo" name="field1" class="field-divided" placeholder="เลขที่ใบสั่งงาน" disabled />
             </li>
             <li>
+                <label class="label-2" style="margin-right: 43%;">วันที่</label>&nbsp;<label class="label-2">รถปิกอัพ</label>
+            </li>
+            <li>
                 <input type="text" id="dtJobDate" class="field-divided" placeholder="วันที่" required/>&nbsp;<input type="text" id="txtCar" name="field1" class="field-divided" placeholder="รถปิกอัพ" />
             </li>
             <li>
@@ -94,19 +97,33 @@
                 <input type="hidden" id="hidCustID" />
             </li>
             <li>
+                <label class="label-2" style="margin-right: 37%;">โทรศัพท์</label>&nbsp;<label class="label-2">แฟกซ์</label>
+            </li>
+            <li>
                 <input type="text" id="txtTel" name="field2" class="field-divided" placeholder="โทรศัพท์" disabled />&nbsp;<input type="text" name="field1" id="txtFax" class="field-divided" placeholder="แฟกซ์" disabled />
+            </li>
+            <li>
+                <label class="label-2" style="margin-right: 31.2%;">บุคคลติดต่อ</label>&nbsp;<label class="label-2">ผู้ประสานงาน</label>
             </li>
             <li>
                 <input type="text" id="txtContact" name="field1" class="field-divided" placeholder="บุคคลติดต่อ" disabled />&nbsp;<input type="text" name="field2" id="txtCoWorker" class="field-divided" placeholder="ผู้ประสานงาน" disabled />
             </li>
             <li>
+                <label class="label-2">ที่อยู่</label>
+            </li>
+            <li>
                 <textarea name="field5" id="txtAddress" class="field-long field-textarea" placeholder="ที่อยู่" disabled></textarea>
+            </li>
+            <li>
+                <label class="label-2">JobReference</label>
             </li>
             <li>
                 <input type="text" id="txtJobReference" name="field1" class="field-divided" placeholder="Job Reference" disabled />
                 <input type="hidden" id="hidBDCID" />
                 <input type="hidden" id="hidJobID" />
             </li>
+        </ul>
+        <ul class="form-style-1">
             <li>
                 <label>หมายเหตุ</label>
                 <textarea name="field5" id="txtRemark" class="field-long field-textarea"></textarea>
