--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -36,7 +36,13 @@
                     <select id="cmbProductType" name="cmbProductType" class="field-divided"></select>
                 </li>
                 <li>
+                    <label class="label-2" style="margin-right: 43%;">ยี่ห้อ</label>&nbsp;<label class="label-2">ขนาด</label>
+                </li>
+                <li>
                     <input type="text" id="txtBrand" name="field1" class="field-divided" placeholder="ยี่ห้อ" />&nbsp;<input type="text" id="txtSize" name="field2" class="field-select-small" placeholder="ขนาด" />
+                </li>
+                <li>
+                    <label class="label-2" style="margin-right: 46%;">รุ่น</label>&nbsp;<label class="label-2">อายุใช้งาน</label>
                 </li>
                 <li>
                     <input type="text" id="txtModel" name="field2" class="field-divided" placeholder="รุ่น" />&nbsp;<input type="text" id="txtLifetime" name="field2" class="field-select-small" placeholder="อายุการใช้งาน" />&nbsp;<label class="label-3">ปี</label>
