--- a/Alpha/AlphaMvc/Views/Technician/EditTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/EditTechnician.cshtml
@@ -23,16 +23,21 @@
         <form>
             <ul class="form-style">
                 <li>
-                    <label>TechnicianID<span class="required">*</span></label>
+                    <label class="label-2" style="margin-right: 29%;">TechnicianID</label>&nbsp;<label class="label-2" style="margin-right: 10%;">HRID</label>
+                </li>
+                <li>
                     <input type="text" id="txtTechnicianID" name="field1" class="field-divided" placeholder="T0008" disabled />&nbsp;<input type="text" id="txtHRCode" name="field2" class="field-divided" placeholder="HR Code" disabled/>
                 </li>
-
                 <li>
-                    <label>ชื่อ - นามสกุล</label>
+                    <label class="label-2" style="margin-right: 46%;">ชื่อ</label>&nbsp;<label class="label-2" style="margin-right: 10%;">นามสกุล</label>
+                </li>
+                <li>
                     <input type="text" id="txtFirstName" name="field1" class="field-divided" placeholder="ชื่อ" disabled />&nbsp;<input type="text" id="txtLastName" name="field2" class="field-divided" placeholder="นามสกุล" disabled/>
                 </li>
                 <li>
-                    <label>ประเภทพนักงาน</label>
+                    <label class="label-2" style="margin-right: 19%;">ประเภทพนักงาน</label>&nbsp;<label class="label-2" style="margin-right: 10%;">เลขบัตรประชาชน</label>
+                </li>
+                <li>
                     <select name="field4" id="cmbTechnicianType" class="field-select-medium" disabled></select>
                     &nbsp;<input type="text" id="txtIDcard" name="field2" class="field-divided" placeholder="เลขบัตรประชาชน" disabled />
                 </li>
