--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -56,25 +56,25 @@
         <form>
             <ul class="form-style-1">
                 <li>
-                    <label>รายละเอียด<span class="required">*</span></label>
+                    <label>เลขที่ใบสั่งงาน</label>
                     <input type="text" id="txtJobNo" name="field1" class="field-divided" placeholder="เลขที่ใบสั่งงาน" disabled />
                 </li>
                 <li>
-                    <label class="label-2" style="margin-right: 43%;">วันที่</label>&nbsp;<label class="label-2">รถปิกอัพ</label>
+                    <label class="label-2" style="margin-right: 43%;">วันที่</label>&nbsp;<label class="label-2">ยานพาหนะ<span class="required">*</span></label>
                 </li>
                 <li>
                     <input type="text" id="dtJobDate" class="field-divided" placeholder="วันที่"  required />&nbsp;<input type="text" id="txtCar" name="field1" class="field-divided" placeholder="รถปิกอัพ" autofocus/>
                     <input type="hidden" id="hidJobDate" />
                 </li>
                 <li>
-                    <label class="label-2">วันเริ่มทำงาน</label>&nbsp;<label class="label-2">วันจบงาน</label>
+                    <label class="label-2">วันเริ่มทำงาน<span class="required">*</span></label>&nbsp;<label class="label-2">วันจบงาน<span class="required">*</span></label>
                 </li>
                 <li>
                     <input type="text" id="dtSWorking" class="field-divided" placeholder="วันเริ่มทำงาน" required/>&nbsp;<input type="text" id="dtEWorking" class="field-divided" placeholder="วันจบงาน" onchange="DateWorking()" required />
                     <input type="hidden" id="hidSWorking" /><input type="hidden" id="hiddtEWorking" />
                 </li>
                 <li>
-                    <label class="label-4">รับงานโดย</label>&nbsp;<label class="label-2">ออกโดย</label>
+                    <label class="label-4">รับงานโดย<span class="required">*</span></label>&nbsp;<label class="label-2">ออกโดย<span class="required">*</span></label>
 
                 </li>
                 <li>
@@ -96,7 +96,7 @@
             <ul class="form-style-1">
 
                 <li>
-                    <label>ลูกค้า</label>
+                    <label>ลูกค้า<span class="required">*</span></label>
                     <input type="text" id="txtCustomerName" class="field-divided" placeholder="ลูกค้า/บริษัท" disabled />&nbsp;<a href="#" data-toggle="modal" data-target="#customerDialog">
                         <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage"  />
                     </a>
