--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -28,7 +28,9 @@
         <form>
             <ul class="form-style-1">
                 <li>
-                    <label>Products <span class="required">*</span></label>
+                    <label class="label-2" style="margin-right: 25%;">Serial Number <span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;">หมายเลขเครื่อง<span class="required">*</span></label>
+                </li>
+                <li>
                     <input type="text" id="txtSerialNo" name="field1" class="field-divided" placeholder="Serial" autofocus required />&nbsp;<input type="text" id="txtMachineNo" name="field1" class="field-divided" placeholder="หมายเลขเครื่อง" required />
                 </li>
                 <li>
@@ -36,25 +38,25 @@
                     <select id="cmbProductType" name="cmbProductType" class="field-divided"></select>
                 </li>
                 <li>
-                    <label class="label-2" style="margin-right: 43%;">ยี่ห้อ</label>&nbsp;<label class="label-2">ขนาด</label>
+                    <label class="label-2" style="margin-right: 42%;">ยี่ห้อ<span class="required">*</span></label>&nbsp;<label class="label-2">ขนาด<span class="required">*</span></label>
                 </li>
                 <li>
                     <input type="text" id="txtBrand" name="field1" class="field-divided" placeholder="ยี่ห้อ" />&nbsp;<input type="text" id="txtSize" name="field2" class="field-select-small" placeholder="ขนาด" />
                 </li>
                 <li>
-                    <label class="label-2" style="margin-right: 46%;">รุ่น</label>&nbsp;<label class="label-2">อายุใช้งาน</label>
+                    <label class="label-2" style="margin-right: 45%;">รุ่น<span class="required">*</span></label>&nbsp;<label class="label-2">อายุใช้งาน<span class="required">*</span></label>
                 </li>
                 <li>
                     <input type="text" id="txtModel" name="field2" class="field-divided" placeholder="รุ่น" />&nbsp;<input type="text" id="txtLifetime" name="field2" class="field-select-small" placeholder="อายุการใช้งาน" />&nbsp;<label class="label-3">ปี</label>
                 </li>
                 <li>
-                    <label class="label-big">รับเข้า</label>&nbsp;<label class="label-small">หน่วยนับ</label>
+                    <label class="label-big">รับเข้า<span class="required">*</span></label>&nbsp;<label class="label-small">หน่วยนับ</label>
                 </li>
                 <li>
                     <input type="text" id="dtReceiveDate" class="field-divided" placeholder="วันที่รับเข้า" required/>&nbsp;<select id="cmbUnitWeight" name="cmbUnitWeight" class="field-select-small-2"></select>
                 </li>
                 <li>
-                    <label class="label-small">ยกมา</label>&nbsp;<label class="label-small-3">คงเหลือ</label>
+                    <label class="label-small">ยกมา<span class="required">*</span></label>&nbsp;<label class="label-small-3">คงเหลือ<span class="required">*</span></label>
                 </li>
                 <li>
                     <input type="text" id="txtBalance" name="field1" class="field-select-small" placeholder="ยกมา" required/>&nbsp;<input type="text" id="txtRemain" name="field2" class="field-select-small" placeholder="คงเหลือ" required />
