--- a/Alpha/AlphaMvc/Views/RoleMaster/IndexRoleMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/RoleMaster/IndexRoleMaster.cshtml
@@ -8,7 +8,7 @@
 @* ------------------------------- Header -------------------------------*@
 @*//===================================================================CSS w3school*@
 
-    <table id="arwRoleMaster" class="example">
+    <table id="tabRoleMaster" class="example">
         <thead class="theader">
             <tr>
                 <th></th>
