--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -14,7 +14,6 @@
 <script src="@Url.Content("~/Scripts/EditableGrid/Pager.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 
-
     <!-- Modal -->
     <div class="modal fade" id="customerDialog" role="dialog">
         <div class="modal-dialog">
@@ -49,6 +48,38 @@
 
         </div>
     </div>
+
+<!-- Modal -->
+<div class="modal fade" id="technicianDialog" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Customer</h4>
+            </div>
+            <div class="modal-body">
+                <div class="table-responsive">
+                    <table id="tblTechnician" class="table table-striped table-hover">
+                        <thead class="bgthead">
+                            <tr>
+                                <th>No.</th>
+                                <th>รหัสพนักงาน</th>
+                                <th>ชื่อ-นามสกุล</th>
+                                <th>ประเภทพนักงาน</th>
+                                <th>ตำแหน่ง</th>
+                                <th>เกรด</th>
+                            </tr>
+                        </thead>
+                        <tbody id="technicianBody"></tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
 
     @using (Html.BeginForm())
     {
