--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -56,7 +56,7 @@
                 <input type="text" id="txtJobNo" name="field1" class="field-divided" placeholder="เลขที่ใบสั่งงาน" disabled />
             </li>
             <li>
-                <label class="label-2" style="margin-right: 43%;">วันที่</label>&nbsp;<label class="label-2">รถปิกอัพ<span class="required">*</span></label>
+                <label class="label-2" style="margin-right: 43%;">วันที่</label>&nbsp;<label class="label-2">ยานพาหนะ<span class="required">*</span></label>
             </li>
             <li>
                 <input type="text" id="dtJobDate" class="field-divided" placeholder="วันที่" required/>&nbsp;<input type="text" id="txtCar" name="field1" class="field-divided" placeholder="รถปิกอัพ" />
