--- a/Alpha/AlphaMvc/Views/RoleMaster/IndexRoleMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/RoleMaster/IndexRoleMaster.cshtml
@@ -54,7 +54,7 @@
                 </td>
 
                 <td>
-                    <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+                    <div class="clone-1"><img class="cloneRoleMaster row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                 </td>
                 <td>
                     <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
@@ -89,7 +89,7 @@
                     <select id="cmbMenuType" class="cmbMenuType"></select>
                 </td>
                 <td>
-                    <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+                    <div class="clone-1"><img class="cloneRoleMaster row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                 </td>
                 <td>
                     <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
